feat: provide a more optimized way of interaction

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "git account toggle"
   ],
   "bin": {
-    "gam": "index.js"
+    "gam": "index.js",
+    "gitam": "index.js"
   },
   "main": "index.js",
   "license": "MIT",
